--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "express": "^4.17.2",
     "express-fileupload": "^1.4.0",
     "express-joi-validation": "^5.0.1",
-    "html-pdf-node": "^1.0.8",
+    "html-pdf": "^3.0.1",
     "html-webpack-plugin": "^5.5.0",
     "joi": "^17.6.0",
     "jsonwebtoken": "^8.5.1",
@@ -25,7 +25,6 @@
     "moment": "^2.29.1",
     "mongoose": "^6.2.0",
     "multer": "^1.4.5-lts.1",
-    "puppeteer": "^19.8.5",
     "q": "^1.5.1",
     "swagger-autogen": "^2.23.1",
     "swagger-ui-express": "^4.6.2",
